Update and rename index (1).html to index.html

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
             Your browser does not support the audio element.
         </audio>
         <header>
-            <h1>Happy birthday AVA🎂</h1>
+            <h1>Happy birthday ELI🎂</h1>
         </header>
         <main>
             <section id="apology">
-                <img src="https://raw.githubusercontent.com/Unnonnon/surprise/main/Ava1.jpg" alt="loding">
-                <p>تولدت مبارک آوا جان</p>
+                <img src="" alt="loding">
+                <p>تولدت مبارک</p>
                 <img src="https://i1.delgarm.com/i/828/011109/birthday-gif(6).gif" alt="loding">
                 <p>با آرزوی بهترین ها</p>
                 <img src="https://raw.githubusercontent.com/Unnonnon/surprise.github.io/main/Ava3.jpg" alt="loding">
