--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         </header>
         <main>
             <section id="apology">
-                <img src="" alt="loding">
+                <img src="https://raw.githubusercontent.com/Unnonnon/Surpris.github.io/refs/heads/main/Picsart_24-10-15_19-43-34-635.png" alt="loding">
                 <p>تولدت مبارک</p>
                 <img src="https://i1.delgarm.com/i/828/011109/birthday-gif(6).gif" alt="loding">
                 <p>با آرزوی بهترین ها</p>
-                <img src="https://raw.githubusercontent.com/Unnonnon/surprise.github.io/main/Ava3.jpg" alt="loding">
+                <img src="https://raw.githubusercontent.com/Unnonnon/Surpris.github.io/refs/heads/main/Picsart_24-10-15_19-49-47-878.png" alt="loding">
 
             </section>
         </main>
